--- a/src/book.tex
+++ b/src/book.tex
@@ -108,7 +108,7 @@
 
 
 % Reduce padding between figure and caption
-\usepackage{caption}
+\usepackage[justification=centering,labelfont=bf]{caption}
 \captionsetup{belowskip=-15pt, aboveskip=8pt}
 
 % Cover is a pdf that is included
@@ -174,14 +174,16 @@
 % just a dozen snippets). Using this function to copy the part of the
 % file we're interested into a temporary file and using that as the input
 % to \lstinputlisting reduces compile time to seconds again.
+% See https://tex.stackexchange.com/questions/669081/lstinputlisting-always-parses-entire-source-file
 \ExplSyntaxOn
 \NewDocumentCommand \CopyPartialFile {mmmm} {
+\def\fromlines{\numexpr #3 - 1}
 \ior_open:Nn \g_tmpa_ior {#1}
 \iow_open:Nn \g_tmpa_iow {#2}
-\prg_replicate:nn {#3} {
+\prg_replicate:nn {\fromlines} {
     \ior_str_get:NN \g_tmpa_ior \l_tmpa_str
 }
-\def\tolines{\numexpr #4 - #3}
+\def\tolines{\numexpr #4 - \fromlines}
 \prg_replicate:nn {\tolines} {
     \ior_str_get:NN \g_tmpa_ior \l_tmpa_str
     \iow_now:Nx \g_tmpa_iow {\l_tmpa_str}
@@ -316,6 +318,8 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 
 \usepackage{tikz}
 \newcommand*\circled[1]{\tikz[baseline=(char.base)]{\node[shape=circle,draw,inner sep=1pt] (char) {#1};}}
+\usetikzlibrary{positioning,shapes}
+
 
 % Used to strike words with \sout
 % \usepackage[normalem]{ulem}
