--- a/src/book.tex
+++ b/src/book.tex
@@ -109,7 +109,7 @@
 
 % Reduce padding between figure and caption
 \usepackage[justification=centering,labelfont=bf]{caption}
-\captionsetup{belowskip=-15pt, aboveskip=8pt}
+%\captionsetup{belowskip=-15pt, aboveskip=8pt}
 
 % Cover is a pdf that is included
 \usepackage{pdfpages}
@@ -347,6 +347,8 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 \usepackage{datetime}
 \renewcommand{\dateseparator}{, }
 \newdateformat{monthyeardate}{\monthname\dateseparator\THEYEAR}
+
+\usepackage{subcaption}
 
 % For end of book empty page (checkoddpage)
 \usepackage{ifoddpage}
